--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-    "bin": {
+  "bin": {
     "slim-cli": "index.js"
   },
   "scripts": {
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.11.0",
+    "chalk": "^5.4.1",
     "dotenv": "^17.2.1",
     "inquirer": "^12.9.0"
   }
