--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "chalk": "^5.4.1",
-    "dotenv": "^17.2.1",
+    "conf": "^14.0.0",
     "inquirer": "^12.9.0"
   }
 }
